Add autotools autogenerated files to .gitignore
Ref #11

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-build/
+*.o
+
+# autotools junk
+Makefile
+Makefile.in
+/aclocal.m4
+/autom4te.cache
+/compile
+/config.h*
+/config.log
+/config.status
+/configure
+/depcomp
+/install-sh
+/missing
+/src/.deps
+/stamp-h1
