--- a/Makefile.am
+++ b/Makefile.am
@@ -1,30 +1,37 @@
 bin_PROGRAMS = wkline
 wkline_SOURCES = \
-	src/widgets/volume.c  \
-	src/widgets/desktops.c  \
-	src/widgets/now_playing_mpd.c  \
-	src/widgets/weather.c \
-	util/curl.c \
 	util/log.c \
-	src/wkline.c
+	src/wkline.c \
+	src/widgets/desktops.c
 
 wkline_LDADD = \
 	$(GTK3_LIBS) \
 	$(WEBKIT_LIBS) \
 	$(XCB_LIBS) \
-	$(CURL_LIBS) \
-	$(JSON_GLIB_LIBS) \
-	$(ALSA_LIBS) \
-	$(MPD_LIBS)
+	$(JSON_GLIB_LIBS)
 
 wkline_CFLAGS = \
 	$(GTK3_CFLAGS) \
 	$(WEBKIT_CFLAGS) \
 	$(XCB_CFLAGS) \
 	$(JSON_GLIB_CFLAGS) \
-	$(CURL_CFLAGS) \
-	$(AM_CFLAGS) \
-	$(ALSA_CFLAGS) \
-	$(MPD_CFLAGS)
+	$(AM_CFLAGS)
+
+if HAVE_LIBMPDCLIENT
+wkline_SOURCES += src/widgets/now_playing_mpd.c
+wkline_LDADD += $(MPD_LIBS)
+wkline_CFLAGS += $(MPD_CFLAGS)
+endif
+if HAVE_LIBCURL
+wkline_SOURCES += util/curl.c \
+	src/widgets/weather.c
+wkline_LDADD += $(CURL_LIBS)
+wkline_CFLAGS += $(CURL_CFLAGS)
+endif
+if HAVE_ALSA
+wkline_SOURCES += src/widgets/volume.c
+wkline_LDADD += $(ALSA_LIBS)
+wkline_CFLAGS += $(ALSA_CFLAGS)
+endif
 
 dist_doc_DATA = README.rst
