widgets/desktop: split window_title to own widget
All globals have also been removed from these widgets.

Conflicts:
	src/widgets/desktops.c
	src/widgets/widgets.h

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,12 @@
 bin_PROGRAMS = wkline
 wkline_SOURCES = \
+	util/copy_prop.c \
 	util/log.c \
 	util/load_config.c \
 	src/wkline.c \
 	src/widgets/widgets.c \
-	src/widgets/desktops.c
+	src/widgets/desktops.c \
+	src/widgets/window_title.c
 
 wkline_LDADD = \
 	$(GTK3_LIBS) \
