config: port all the widgets that need configuration to the new system

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"height": 26,
-	"position": "bottom",
+	"position": "top",
 	"theme_uri": "http://lokaltog.github.io/wkline-default-theme/",
 	"background": "#111",
 	"monitor": 0,
