Revert "widgets/desktop: split window_title to own widget"
This reverts commit f148bc3b348bbc1bd17d4b628c537d5197e9a6e2.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,9 @@
 bin_PROGRAMS = wkline
 wkline_SOURCES = \
-	util/copy_prop.c \
 	util/log.c \
 	src/wkline.c \
 	src/widgets/widgets.c \
-	src/widgets/desktops.c \
-	src/widgets/window_title.c
+	src/widgets/desktops.c
 
 wkline_LDADD = \
 	$(GTK3_LIBS) \
