Update uncrustify rule for case statements

--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -1046,7 +1046,7 @@ nl_multi_line_cond                       = false    # false/true
 nl_multi_line_define                     = false    # false/true
 
 # Whether to put a newline before 'case' statement
-nl_before_case                           = true    # false/true
+nl_before_case                           = false    # false/true
 
 # Add or remove newline between ')' and 'throw'
 nl_before_throw                          = ignore   # ignore/add/remove/force
