--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -1090,10 +1090,10 @@ nl_func_paren                            = remove   # ignore/add/remove/force
 nl_func_def_paren                        = remove   # ignore/add/remove/force
 
 # Add or remove newline after '(' in a function declaration
-nl_func_decl_start                       = ignore   # ignore/add/remove/force
+nl_func_decl_start                       = remove   # ignore/add/remove/force
 
 # Add or remove newline after '(' in a function definition
-nl_func_def_start                        = ignore   # ignore/add/remove/force
+nl_func_def_start                        = remove   # ignore/add/remove/force
 
 # Overrides nl_func_decl_start when there is only one parameter.
 nl_func_decl_start_single                = ignore   # ignore/add/remove/force
@@ -1108,10 +1108,10 @@ nl_func_decl_args                        = ignore   # ignore/add/remove/force
 nl_func_def_args                         = ignore   # ignore/add/remove/force
 
 # Add or remove newline before the ')' in a function declaration
-nl_func_decl_end                         = ignore   # ignore/add/remove/force
+nl_func_decl_end                         = remove   # ignore/add/remove/force
 
 # Add or remove newline before the ')' in a function definition
-nl_func_def_end                          = ignore   # ignore/add/remove/force
+nl_func_def_end                          = remove   # ignore/add/remove/force
 
 # Overrides nl_func_decl_end when there is only one parameter.
 nl_func_decl_end_single                  = ignore   # ignore/add/remove/force
@@ -1120,17 +1120,17 @@ nl_func_decl_end_single                  = ignore   # ignore/add/remove/force
 nl_func_def_end_single                   = ignore   # ignore/add/remove/force
 
 # Add or remove newline between '()' in a function declaration.
-nl_func_decl_empty                       = ignore   # ignore/add/remove/force
+nl_func_decl_empty                       = remove   # ignore/add/remove/force
 
 # Add or remove newline between '()' in a function definition.
-nl_func_def_empty                        = ignore   # ignore/add/remove/force
+nl_func_def_empty                        = remove   # ignore/add/remove/force
 
 # Whether to put each OC message parameter on a separate line
 # See nl_oc_msg_leave_one_liner
 nl_oc_msg_args                           = false    # false/true
 
 # Add or remove newline between function signature and '{'
-nl_fdef_brace                            = ignore   # ignore/add/remove/force
+nl_fdef_brace                            = remove   # ignore/add/remove/force
 
 # Add or remove newline between C++11 lambda signature and '{'
 nl_cpp_ldef_brace                        = ignore   # ignore/add/remove/force
