config: load system config if user config not found
build with:
$ autoreconf  --install
$ ./configure --sysconfdir=/etc/xdg/wkline --prefix=/usr
$ make
make install

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,11 @@
 bin_PROGRAMS = wkline
+
+sysconf_DATA = config.json
+
 wkline_SOURCES = \
 	util/copy_prop.c \
 	util/log.c \
-	util/load_config.c \
+	util/config.c \
 	src/wkline.c \
 	src/widgets/widgets.c
 
