Remove autotools files and gitignore entries

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
-*.o
-
-# autotools junk
-Makefile
-Makefile.in
-/aclocal.m4
-/autom4te.cache
-/compile
-/config.h*
-/config.log
-/config.status
-/configure
-/depcomp
-/install-sh
-/missing
-/stamp-h1
-/wkline
-.deps/
-.dirstamp
+build/
+.lock-waf*
