--- a/config.json
+++ b/config.json
@@ -4,52 +4,40 @@
 	"theme_uri": "http://lokaltog.github.io/wkline-theme-default/",
 	"background": "#111",
 	"monitor": 0,
-	"widgets": {
+	"widgets": [
+		"desktops",
+		"window_title",
+		"now_playing_mpd",
+		"volume",
+		"weather",
+		"external_ip",
+		"battery"
+	],
+	"widgets_config": {
 		"desktops": {
-			"position": 0,
-			"enabled": true,
-
 			"names": ["I", "II", "III", "IV", "V"]
 		},
 		"now_playing_mpd": {
-			"position": 1,
-			"enabled": true,
-
 			"update_interval": 1000,
 			"host": "localhost",
 			"port": 6600,
 			"timeout": 5000
 		},
 		"volume": {
-			"position": 2,
-			"enabled": true,
-
 			"card": "default",
 			"selem": "Master"
 		},
 		"weather": {
-			"position": 3,
-			"enabled": true,
-
 			"location": "",
 			"unit": "c"
 		},
 		"external_ip": {
-			"position": 4,
-			"enabled": true,
-
 			"address": "http://ipv4.icanhazip.com/"
 		},
 		"battery": {
-			"position": 5,
-			"enabled": true,
-
 			"name": "BAT0"
 		},
 		"datetime": {
-			"position": 6,
-			"enabled": true,
-
 			"update_interval": 1000,
 			"date_format": "DDDD-MM-YY",
 			"time_format": "HH:mm:ss"
