config: simplify fetching widget configuration
each widget has only his config object not the global object

--- a/config.json
+++ b/config.json
@@ -4,16 +4,7 @@
 	"theme_uri": "http://lokaltog.github.io/wkline-theme-default/",
 	"background": "#111",
 	"monitor": 0,
-	"widgets": [
-		"desktops",
-		"window_title",
-		"now_playing_mpd",
-		"volume",
-		"weather",
-		"external_ip",
-		"battery"
-	],
-	"widgets_config": {
+	"widgets": {
 		"desktops": {
 			"names": ["I", "II", "III", "IV", "V"]
 		},
