--- a/config.json
+++ b/config.json
@@ -4,19 +4,11 @@
 	"theme_uri": "http://lokaltog.github.io/wkline-theme-default/",
 	"background": "#111",
 	"monitor": 0,
-	"widgets": [
-		"desktops",
-		"window_title",
-		"now_playing_mpd",
-		"volume",
-		"weather",
-		"external_ip",
-		"battery"
-	],
-	"widgets_config": {
+	"widgets": {
 		"desktops": {
 			"names": ["I", "II", "III", "IV", "V"]
 		},
+		"window_title": {},
 		"now_playing_mpd": {
 			"update_interval": 1000,
 			"host": "localhost",
