config: convert theme config to config object
This will allow themes to have custom configuration options, to e.g.
allow users to change stuff like the theme background color, widget
dimensions, etc.

--- a/config.json
+++ b/config.json
@@ -1,8 +1,11 @@
 {
 	"height": 24,
 	"position": "top",
-	"theme_uri": "http://lokaltog.github.io/wkline-theme-default/",
 	"screen": 0,
+	"theme": {
+		"uri": "http://lokaltog.github.io/wkline-theme-default/",
+		"config": {}
+	},
 	"widgets": [
 		{
 			"module": "desktops",
