Revert "main: use "screen" instead of "monitor" to be consistent"
This reverts commit a4f1f3c91731b36d33c2e9b9719a996abd12cb5b.

Conflicts:
	config.json
	docs/wkline.1
	src/wkline.c

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"height": 24,
 	"position": "top",
-	"screen": 0,
+	"monitor": 0,
 	"theme": {
 		"uri": "http://lokaltog.github.io/wkline-theme-default/",
 		"config": {}
