wscript: add support for local themes
This feature is a bit flawed at the moment:

- You have to run waf twice because waf doesn't know how to install
  files after building them (or this may be possible, but it's
  impossible to find docs for it)
- LIBDIR has to be refactored to a generic "project root" directory, so
  candybar knows where to search for both the modules (in /usr/lib) and
  the themes (/usr/share) - this only applies to debug builds as $PREFIX
  works fine with system-wide build/installs

--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
 	"position": "top",
 	"monitor": 0,
 	"theme": {
-		"uri": "http://lokaltog.github.io/candybar-theme-default/",
+		"uri": "@THEME_URI@",
 		"config": {}
 	},
 	"widgets": [
